--- a/public/info.html
+++ b/public/info.html
@@ -8,7 +8,14 @@
     <title>How To Play</title>
   </head>
   <body class="background-image">
-    <header>
+    <header class="center-horizontally">
+      <div
+        id="navbar-title-container"
+        class="center-horizontally fixed tight-fill-card"
+      >
+        <h1 id="navbar-title">Artificial Whispers</h1>
+      </div>
+
       <section class="links">
         <a href="./index.html">
           <button class="navigate navbar">Home</button>
